# instagram-dm-automater

./: .gitignore  README.md  README.rst  pyproject.toml
insta_dm/: config_example.py  dm.py
